2003-11-02  Mark Kettenis  <kettenis@gnu.org>

	Merge from mailine:

	2003-10-27  Andrew Cagney  <cagney@redhat.com>

	* osabi.c (gdbarch_init_osabi): Use info.bfd_arch_info instead of
	arch_info.  Use warning instead of fprintf_filtered.  Do not use
	deprecated bfd_printable_arch_mach.

	2003-10-24  Andrew Cagney  <cagney@redhat.com>

	* osabi.c (gdbarch_init_osabi): Fix typos, and "fortunatly"[sic].
	
	2003-10-23  Jim Blandy  <jimb@redhat.com>

	* osabi.c (gdbarch_init_osabi): A handler is okay if it's for an
	architecture the current arch can run code for --- but not if it's
	a superset.
	(can_run_code_for): New function.

2003-11-02  Mark Kettenis  <kettenis@gnu.org>

	* sparc64-tdep.h (r_tstate_offset): New define.
	(sparc64_supply_gregset, sparc64_collect_gregset,
	sparc64_supply_fpregset, sparc64_collect_fpregset): New
	prototypes.
	(sparc64_sol2_gregset): New extern declaration.
	(sparc64_sol2_init_abi): New prototype.
	* sparc64-tdep.c: Include "symtab.h" and "objfiles.h".  Don't
	include "sparc-tdep.h".
	(X_RD, X_I): New macros.
	(sparc64_analyze_prologue): Sync with implementation in
	sparc-tdep.c.
	(TSTATE_CWP, TSTATE_ICC, TSTATE_XCC): New macros.
	(PSR_S, PSR_ICC, PSR_VERS, PSR_IMPL, PSR_V8PLUS, PSR_XCC): New
	macros.
	(sparc64_supply_gregset, sparc64_collect_gregset,
	sparc64_supply_fpregset, sparc64_collect_fpregset): New functions.
	* sparc64-nat.c: New file.
	* sparc64-sol2-nat.c: New file.
	* sparc64-sol2-tdep.c: New file.
	* sparc64-linux-nat.c: New file.
	* sparc64-linux-tdep.c: New file.
	* Makefile.in (sparc_tdep_h): New variable.
	(ALLDEPFILES): Add sparc64-sol2-tdep.c, sparc64-linux-tdep.c,
	sparc64-nat.c sparc64-sol2-nat.c and sparc64-linux-nat.c
	(sparc-nat.o, sparc-linux-tdep.o, sparc64-tdep.o): Update
	dependencies.
	(sparc64-nat.o, sparc64-linux-nat.o, sparc64-linux-tdep.o,
	sparc64-sol2-nat.o, sparc64-sol2-tdep.o): New dependencies.
	* configure.tgt: Add sparc64-*-linux*.
	* configure.host: Add sparc64-*-linux*.